# huggingcloud

./: .dockerignore  .gitignore  README.md  dev.sh  docker-compose.full.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.runtime.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260302_0001_initial.py  20260302_0002_user_avatar_emoji.py  20260304_0003_system_settings.py  20260305_0004_passkeys.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: runtime_schema.py  session.py  types.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: __init__.py  audit.py  auth.py  common.py  files.py  links.py  settings.py  setup.py  uploads.py
backend/app/services/: __init__.py  acl.py  audit.py  auth_guard.py  auth_service.py  bootstrap_service.py  cache.py  file_index_service.py  hf_client.py  link_service.py  passkey_service.py  quota.py  rate_limit.py  redis_client.py  security_settings.py  signer.py  system_settings.py  upload_service.py
backend/tests/: test_acl_defaults.py  test_auth_guard.py  test_auth_schema.py  test_bootstrap_service.py  test_datetime_utils.py  test_deps.py  test_download_headers.py  test_file_index_service.py  test_files_acl_listing.py  test_inmemory_cache.py  test_link_schema.py  test_link_service.py  test_paths.py  test_rate_limit.py  test_schema_from_attributes.py  test_security_settings.py  test_settings_schema.py  test_signer.py  test_upload_service.py
docker/: Dockerfile  (+1 more)
(+86 files in other folders)
