[project]
name = "hf-storage-gateway-backend"
version = "0.1.0"
description = "Backend service for HF private dataset storage gateway"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.120.4",
  "starlette==0.49.3",
  "uvicorn[standard]==0.35.0",
  "sqlalchemy==2.0.41",
  "greenlet==3.2.4",
  "alembic==1.16.4",
  "aiosqlite==0.20.0",
  "asyncpg==0.30.0",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "redis==5.0.8",
  "httpx==0.28.1",
  "huggingface_hub==0.34.4",
  "python-multipart==0.0.22",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==3.2.2",
  "itsdangerous==2.2.0",
  "authlib==1.6.9",
  "webauthn==2.7.0",
  "email-validator==2.2.0",
  "python-dotenv==1.0.1",
]

[dependency-groups]
dev = [
  "pytest==8.4.1",
  "pytest-asyncio==0.23.8",
]

[tool.uv]
package = false
